--- a/text/praca/sekvenovanie.tex
+++ b/text/praca/sekvenovanie.tex
@@ -28,12 +28,16 @@ jednotlivých čítaniach \cite{Laver2015}. Pri nanopórovom sekvenovaní sa vo 
 \emph{nanopór}, t. j. otvor s priemerom rádovo $1 \si{nm}$. Membránou sa oddelia dve komory s 
 elektrolytom, pričom v jednej z komôr sa nachádza aj predpripravená vzorka DNA.
 Po zavedení elektrického napätia medzi komorami začne nanopórom tiecť iónový prúd. Jedno vlákno DNA
- sa postupne oddeľuje od druhého a prechádza nanopórom. Časť vlákna, 
+ sa postupne oddeľuje od druhého a prechádza nanopórom (Obr. \ref{fig:nanopor}). Časť vlákna, 
 ktorá sa práve nachádza v najužšej časti nanopóru, má vplyv na elektrický prúd tečúci cez nanopór. Rôzne 
 bázy ovplyvňujú elektrický prúd rôznym spôsobom. Pri sekvenovaní sa meria priebeh elektrického prúdu v 
 čase a na základe jeho zmien sa potom určuje, aké bázy prešli cez nanopór \cite{Branton2008}.
 
-\todo{obrázok}
+\begin{figure}[t]
+\centerline{\includegraphics[width=0.7\textwidth]{images/nanopor}}
+\caption{Prechod jedného vlákna DNA nanopórom.}
+\label{fig:nanopor}
+\end{figure}
 
 V našej práci budeme pracovať s dátami zo sekvenátora MinION.
 Prístroj MinION je nanopórový sekvenátor vyrábaný firmou Oxford Nanopore Technologies.
@@ -44,8 +48,6 @@ Vo verzii, s ktorou pracujeme, prechádza vlákno DNA cez nanopór rýchlosťou 
 sekundu. Hodnota elektrického prúdu sa zaznamenáva $4000$-krát za sekundu, teda v priemere zhruba $10$-
 krát na bázu. Namerané hodnoty prúdu sa pre každé čítanie ukladajú do zvlášť súboru vo formáte 
 \texttt{.fast5}. Tieto nespracované dáta budeme nazývať \emph{surový signál}.
-
-\todo{obrázok}
 
 \subsection{Normalizácia signálu}
 
@@ -74,7 +76,7 @@ $$s_i = \frac{r_i - M}{D} \text{.}$$
 
 Na základe signálu nameraného zariadením MinION sa určuje, aké dusíkaté bázy prechádzali nanopórom, keď bol
 tento signál zaznamenaný. Táto úloha je pomerne náročná a v súčasnosti sa stále vyvíjajú lepšie a
-lepšie riešenia. Programy, ktoré určujú bázy, nazývame \emph{basecallery}\footnote{z anglického \emph{base calling} -- určovanie báz.}.
+lepšie riešenia. Programy, ktoré určujú bázy, nazývame \emph{prekladače báz}.
 
 Pri určovaní báz sa využíva fakt, že rôzne bázy pri svojom prechode nanopórom ovplyvňujú signál
 rôznym charakteristickým spôsobom. V praxi však signál nie je ovplyvnený iba jednou bázou. Pracuje
@@ -89,15 +91,13 @@ udalosťami sa vlákno DNA väčšinou posunie o jednu bázu. Keďže však rozd
 presne zodpovedať posunom DNA vlákna v nanopóre, uvažuje sa aj možnosť, že sa vlákno medzi udalosťami 
 neposunulo, prípadne posunulo o viac než jednu bázu.
 
-\todo{obrázok}
-
-Niektoré basecallery (napr. Nanocall \cite{Nanocall2017}) modelujú prechod DNA vlákna nanopórom ako 
+Niektoré prekladače báz (napr. Nanocall \cite{Nanocall2017}) modelujú prechod DNA vlákna nanopórom ako 
 skrytý Markovovský model. Na základe tohto
 modelu sa Viterbiho algoritmom vypočíta najpravdepodobnejšia postupnosť báz, ktorá mohla vygenerovať 
 pozorovaný signál.
 
-Iné basecallery sú založené na rekurentných neurónových sieťach. Niektoré (napr. DeepNano 
+Iné prekladače báz sú založené na rekurentných neurónových sieťach. Niektoré (napr. DeepNano 
 \cite{DeepNano2017}) pracujú so signálom rozdeleným na udalosti, iné pracujú s nerozdeleným signálom 
 (napr. Chiron \cite{Chiron2017}).
 
-Najlepšie súčasné basecallery majú pre jedno čítanie presnosť okolo $85\%$ až $90\%$. Ak sa osekvenuje viac kópií rovnakej DNA, skombinovaním dostatočného počtu prekrývajúcich sa čítaní sa dá dosiahnuť presnosť okolo $99,9\%$ \cite{BasecallerComparison}.
+Najlepšie súčasné prekladače báz majú pre jedno čítanie presnosť okolo $85\%$ až $90\%$. Ak sa osekvenuje viac kópií rovnakej DNA, skombinovaním dostatočného počtu prekrývajúcich sa čítaní sa dá dosiahnuť presnosť okolo $99,9\%$ \cite{BasecallerComparison}.
